VAN-19071,VAN-19072 high contrast fixes

--- a/vtr-ui/src/app/components/modal/modal-network-boost/networkboost-turn-on/networkboost-turn-on.component.scss
+++ b/vtr-ui/src/app/components/modal/modal-network-boost/networkboost-turn-on/networkboost-turn-on.component.scss
@@ -21,12 +21,9 @@ ui-popover-turn-on {
 	@media #{$breakpoint_sm} {
 		width: 90%;
 	}
-	@media #{$black-on-white}{
-		border:0.1rem solid $dark;
-		}
-		@media #{$white-on-black}{
-		border:0.1rem solid $light;
-		}
+	@media #{$high-contrast} {
+		border: 0.1rem solid windowText;
+	}
 }
 
 ::ng-deep .turn-on-modal-container {
@@ -71,11 +68,11 @@ ui-popover-turn-on {
 				background-repeat: no-repeat;
 				background-size: 100% auto;
 				background-color: $gaming_light_blue;
-				@media #{$black-on-white} {
-					background-color: $gaming_light_blue;
+				@media #{$high-contrast} {
+					background-color: window;
 				}
-				@media #{$white-on-black} {
-					background-color: $gaming_light_blue;
+				@media #{$black-on-white} {
+				background-image: url("data:image/svg+xml;charset=UTF-8,%3c?xml version='1.0' encoding='UTF-8'?%3e%3csvg width='15px' height='15px' viewBox='0 0 20 20' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3e%3c!-- Generator: Sketch 54.1 (76490) - https://sketchapp.com --%3e%3ctitle%3e6.20pxIcon/checkLine%3c/title%3e%3cdesc%3eCreated with Sketch.%3c/desc%3e%3cg id='6.20pxIcon/checkLine' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3e%3cpath d='M8.1116626,13.630581 L16.0313582,5.35279564 C16.4676981,4.89672665 17.1911384,4.88073301 17.6472074,5.31707287 C18.1032764,5.75341272 18.11927,6.47685303 17.6829301,6.93292202 L8.93558544,16.0757787 C8.48484105,16.5469035 7.73191951,16.546056 7.28223692,16.0739175 L2.31529664,10.8589429 C1.87998466,10.4018927 1.89760695,9.67849027 2.35465713,9.24317828 C2.81170731,8.8078663 3.53510978,8.82548859 3.97042177,9.28253877 L8.1116626,13.630581 Z' id='Path-2' fill='%23000000' fill-rule='nonzero'%3e%3c/path%3e%3c/g%3e%3c/svg%3e");
 				}
 			}
 		}
@@ -100,12 +97,9 @@ ui-popover-turn-on {
 	}
 
 	.btn-close {
-		@media #{$black-on-white}{
-			color: $high-contrast-grey;
-			}
-			@media #{$white-on-black}{
-			color: $high-contrast-grey;
-			}
+		@media #{$high-contrast}{
+			color: windowText;
+		}
 		button.close {
 			&:hover {
 				opacity: 0.75;
@@ -125,6 +119,10 @@ ui-popover-turn-on {
 			padding: 1rem 3rem;
 			margin-top: 1rem;
 			font-weight: $weight_bold;
+			@media #{$high-contrast} {
+				color:windowText;
+				border: 0.1rem solid windowText;
+			}
 		&:active {
 			transform: scale(0.95);
 		}
